--- a/src/component/Home/NeonatologySection.css
+++ b/src/component/Home/NeonatologySection.css
@@ -76,15 +76,83 @@
   /* Responsive adjustments */
   @media screen and (max-width: 768px) {
     .neonatology-section {
-      flex-direction: column;
+      display: block;
+      width: 100%;
+      height:fit-content;
+    }
+    
+    .neonatology-section .image-section {
+      width: 100%;
+      height: fit-content;
+      padding: 0px;
+      scale:1;
+    }
+    
+    .neonatology-section .image-section img {
+      width: 95%;
+      height: 480px;
+      border-radius: 10px;
+    }
+    
+    .text-section {
+      font-family: Arial, sans-serif;
+     scale: 1.1;
+        width:100%;
+        height:fit-content;
+        padding-top: 100px;
+         
+    }
+    
+    .neonatology-section .text-section .title {
+      font-size: 35px;
+      line-height: 1.4;
+      padding-left: 30px;
+  
+      
+    
+      color: #3a6ea1;
+    }
+   .text-section .title span{
+       color: #f46d67;
+    }
+    
+    .flex-container1 ,.flex-container2{
+    
+      /* padding: 30px; */
+      text-align: left;
+      width: 100%;
+      height:fit-content;
+      display: block;
+      /* outline: auto; */
+  }
+    .flex-container1 .flex-item {
+      /* flex: 0 0 0%; Each item will take up about 48% of the width */
+      width: 80%;
+      height: fit-content;  
+      border-radius: 10px;
+      text-align: center;
+      color: black;
+      display: block;
+      /* outline: auto; */
+      margin: 0px;
+      padding: 0px;
+      margin-left: 30px;
+    }
+    .flex-container .flex-item  img{
+      width: 100px;
+      height:fit-content;
+    }
+    
+    .flex-item h3 {
+      margin-top: 0;
+      font-size: 18px;
+      text-align: left;
     }
   
-    .image-section, .text-section {
-      flex: 0 0 100%;
-    }
-  
-    .flex-item {
-      flex: 0 0 100%; /* Full width for smaller screens */
+    .flex-item p{
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: left;
     }
   }
   
