--- a/src/component/Home/Banner.css
+++ b/src/component/Home/Banner.css
@@ -1,192 +1,78 @@
 /* Banner container */
 .banner {
-    background-image: url('../../img/home.png'); /* Replace with your image URL */
-    background-size: cover;
-    background-position: center;
-    height: 900px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 20px;
-    color: rgb(136, 69, 207);
-    overflow-y: hidden;
-    position: relative;
-    background-color: rgb(29, 221, 221);
-  }
-  
-  /* Banner content */
-  .banner-content {
-    padding: 90px;
-    padding-top: 0px;
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; /* Align content to the left */
-    overflow-y: hidden;
-  }
-  
-  /* Banner text */
-  .banner-text {
-    width: 50%;
-    font-size: 76px;
-    margin-bottom: 20px;
-    text-align: left; /* Align text to the left */
-    line-height: 76px;
-    overflow-y: hidden;
-    font-style: italic;
-    font-weight: 700;
-  }
-  
-  /* Highlighted text */
-  .highlight {
-    color: #3322af; /* Yellow color for 'first choice' */
-  }
-  
-  /* Neonatology highlighted text */
-  .neonatology {
-    color:#3322af; /* Red color for 'neonatology' */
-  }
-  
-  /* Button container */
-  .buttons-container {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
-  }
-  
-  /* Schedule container */
-  .schedule-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; /* Align content to the left */
-  }
-  
-  .divider {
-    border: none;
-    border-top: 1px solid white;
-    margin: 10px 0;
-    width: 100%;
-  }
-  
-  /* Schedule texts and divider */
-  .schedule-texts {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    font-weight: bold;
-    color: rgb(136, 69, 207);
-
-  }
-  
-  .schedule-text {
- 
-    text-align: left;
-    margin-right: 10px;
-    color: rgb(136, 69, 207);
-
-  }
-  .schedule-texts a{
-    text-decoration: none;
-    /* border: solid 2px #ccc; */
-  }
-  .schedule-texts .schedule-text:hover .callno{
-    text-decoration: none;
-    color: rgb(32, 76, 217);
-  } .schedule-texts .schedule-text:hover .icon{
-    text-decoration: none;
-    color: rgb(45, 21, 224);
-  }
-  
-  .vertical-divider {
-    border: none;
-    border-left: 1px solid white;
-    height: 40px; /* Adjust height to match text height */
-    margin: 0 10px;
-  }
-  
-  /* Button styles */
-  .btn {
-    background-color:  #3322af;
-    /* border: 2px solid white; */
-    border-radius: 100px;
-    color: white;
-    padding: 20px 40px;
-    font-size: 1em;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-    font-size: 20px;
-    margin-left: 0px;
-    font-weight: 900;
-    margin-top: 20px;
-  }
-  .btn2{
-    background-color: rgb(136, 69, 207);
-  }
-  .btn2:hover{
-    color: rgb(136, 69, 207);
-    background-color: #FFFFFF;
-  }
-  
-  .btn1:hover  {
-    background-color: white;
-    color: #3322af;
-    /* border: 2PX solid #3322af; */
-  }
-  
-  /* Responsive design */
-  @media (max-width: 768px) {
-    /* Banner container */
-.banner {
-  background-image: url('../../img/home.png'); /* Replace with your image URL */
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-position:0px;
-  height: 800px;
-  display: block;
+  background-image: url('../../img/home.png');
+  /* Replace with your image URL */
+  background-size: cover;
+  background-position: center;
+  height: 900px;
+  display: flex;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   padding: 0 20px;
   color: rgb(136, 69, 207);
   overflow-y: hidden;
   position: relative;
-  margin: 0;
+  background-color:rgb(164, 164, 219);
+}
+
+.banner .custom-shape-divider-bottom-1725689494 {
+  position: absolute;
+  top: 700px;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-bottom-1725689494 svg {
+  position: relative;
+  display: block;
+  width: calc(280% + 1.3px);
+  height: 313px;
+}
+
+.custom-shape-divider-bottom-1725689494 .shape-fill {
+  fill: #E9F3FF;
 }
 
 /* Banner content */
 .banner-content {
-  padding: 0px;
-  padding-top: 150px;
+  padding: 90px;
+  padding-top: 0px;
   width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
-  align-items:start; /* Align content to the left */
+  align-items: flex-start;
+  /* Align content to the left */
   overflow-y: hidden;
-  position: static;
-  
 }
 
 /* Banner text */
 .banner-text {
-  width: 100%;
-  font-size: 30px;
+  width: 60%;
+  font-size: 76px;
   margin-bottom: 20px;
-  text-align: left; /* Align text to the left */
-  line-height: 26px;
+  text-align: left;
+  /* Align text to the left */
+  line-height: 76px;
   overflow-y: hidden;
   font-style: italic;
   font-weight: 700;
+  font-family: "overlock", sans-serif;
+  
 }
 
 /* Highlighted text */
 .highlight {
-  color: #3322af; /* Yellow color for 'first choice' */
+  color: #3322af;
+  /* Yellow color for 'first choice' */
 }
 
 /* Neonatology highlighted text */
 .neonatology {
-  color:#3322af; /* Red color for 'neonatology' */
+  color: #3322af;
+  /* Red color for 'neonatology' */
 }
 
 /* Button container */
@@ -200,7 +86,390 @@
 .schedule-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* Align content to the left */
+  align-items: flex-start;
+  width:fit-content;
+  /* Align content to the left */
+}
+
+/* .divider {
+  border: none;
+  border-top: 1px solid white;
+  margin: 10px 0;
+  width: 100%;
+} */
+
+/* Schedule texts and divider */
+.schedule-texts {
+  display: flex;
+  align-items: left;
+  width: 100%;
+  font-weight: bold;
+  color: rgb(136, 69, 207);
+
+}
+
+.schedule-text {
+
+  text-align: left;
+  margin-right: 10px;
+  color: rgb(77, 28, 183);
+  width: 200px;
+
+}
+
+.schedule-texts a {
+  text-decoration: none;
+  /* border: solid 2px #ccc; */
+}
+.schedule-text .callno{
+  width: 100%;
+  font-size: 30px;
+  display: flex;
+}
+.schedule-texts .callno .icon{
+
+}
+
+.schedule-texts .schedule-text:hover .callno {
+  text-decoration: none;
+  color: rgb(32, 76, 217);
+}
+
+.schedule-texts .schedule-text:hover .callno .icon {
+  text-decoration: none;
+  color: rgb(45, 21, 224);
+}
+
+.vertical-divider {
+  border: none;
+  border-left: 1px solid white;
+  height: 40px;
+  /* Adjust height to match text height */
+  margin: 0 10px;
+}
+
+/* Button styles */
+.btn {
+  background-color: #3322af;
+  /* border: 2px solid white; */
+  border-radius: 100px;
+  color: white;
+  padding: 20px 40px;
+  font-size: 1em;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  font-size: 20px;
+  margin-left: 0px;
+  font-weight: 900;
+  margin-top: 20px;
+}
+
+.btn2 {
+  background-color: rgb(136, 69, 207);
+}
+
+.btn2:hover {
+  color: rgb(136, 69, 207);
+  background-color: #FFFFFF;
+}
+
+.btn1:hover {
+  background-color: white;
+  color: #3322af;
+  /* border: 2PX solid #3322af; */
+}
+
+/* Responsive design */
+@media screen and (max-width: 768px) {
+
+  /* Banner container */
+  .banner {
+    background-image: url('../../img/home.png');
+background-size: 50% contain;
+    background-repeat: no-repeat;
+    /* background-position: 0px; */
+    height: 700px;
+    display: block;
+    align-items: center;
+    /* justify-content: center; */
+    padding: 0 20px;
+    color: rgb(136, 69, 207);
+    overflow-y: hidden;
+    position: relative;
+    margin: 0;
+    
+  }
+  .banner .custom-shape-divider-bottom-1725689494 {
+    position: absolute;
+    top: 500px;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+  }
+  
+  .custom-shape-divider-bottom-1725689494 svg {
+    position: relative;
+    display: block;
+    width: calc(280% + 1.3px);
+    height: 213px;
+  }
+  
+  .custom-shape-divider-bottom-1725689494 .shape-fill {
+    fill: #E9F3FF;
+  }
+  
+  /* Banner content */
+  .banner-content {
+    padding: 0px;
+    padding-top: 100px;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    /* Align content to the left */
+    overflow-y: hidden;
+    position: static;
+
+  }
+
+  /* Banner text */
+  .banner .banner-text {
+    width: 90%;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    text-align: left;
+    /* Align text to the left */
+    line-height: 2.5rem;
+    overflow-y: hidden;
+    font-style: italic;
+    font-weight: 500;
+  }
+
+  /* Highlighted text */
+  .highlight {
+    color: rgb(136, 69, 207);
+    
+    /* Yellow color for 'first choice' */
+  }
+
+  /* Neonatology highlighted text */
+  .neonatology {
+    color: #3322af;
+    /* Red color for 'neonatology' */
+  }
+
+  /* Button container */
+  .buttons-container {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  /* Schedule container */
+  .schedule-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* Align content to the left */
+  }
+
+  .divider {
+    border: none;
+    border-top: 1px solid white;
+    margin: 10px 0;
+    width: 100%;
+  }
+
+  /* Schedule texts and divider */
+  .schedule-texts {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    font-weight: bold;
+    color: rgb(136, 69, 207);
+
+  }
+
+  .schedule-text {
+
+    text-align: left;
+    margin-right: 10px;
+    color: rgb(146, 61, 238);
+
+  }
+
+  .schedule-texts a {
+    text-decoration: none;
+    /* border: solid 2px #ccc; */
+  }
+
+  .schedule-texts .schedule-text:hover .callno {
+    text-decoration: none;
+    color: rgb(32, 76, 217);
+  }
+
+  .schedule-texts .schedule-text:hover .icon {
+    text-decoration: none;
+    color: rgb(45, 21, 224);
+  }
+
+  .vertical-divider {
+    border: none;
+    border-left: 1px solid white;
+    height: 40px;
+    /* Adjust height to match text height */
+    margin: 0 10px;
+  }
+
+  /* Button styles */
+  .btn {
+    background-color: #3322af;
+    /* border: 2px solid white; */
+    border-radius: 100px;
+    color: white;
+    padding: 20px 40px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    font-size: 20px;
+    margin-left: 0px;
+    font-weight: 900;
+    margin-top: 20px;
+    border: transparent;
+  }
+
+  .btn2 {
+    background-color: rgb(136, 69, 207);
+  }
+
+  .btn2:hover {
+    color: rgb(136, 69, 207);
+    background-color: #FFFFFF;
+  }
+
+  .btn1:hover {
+    background-color: white;
+    color: #3322af;
+    /* border: 2PX solid #3322af; */
+  }
+
+  .banner-text {
+    font-size: 1.5em;
+  }
+
+  .btn {
+    font-size: 0.9em;
+    padding: 8px 16px;
+  }
+
+  .schedule-texts {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .vertical-divider {
+    display: none;
+  }
+}
+
+@media screen and (min-width:768px) and (max-width:1064px){
+
+  /* Banner container */
+.banner {
+  background-image: url('../../img/home.png');
+  /* Replace with your image URL */
+  background-size: cover;
+  background-position: center;
+  height: 900px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+  color: rgb(136, 69, 207);
+  overflow-y: hidden;
+  position: relative;
+  background-color:rgb(164, 164, 219);
+  border: none;
+}
+
+.banner .custom-shape-divider-bottom-1725689494 {
+  position: absolute;
+  top: 700px;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  line-height: 0;
+  border: none;
+}
+
+.custom-shape-divider-bottom-1725689494 svg {
+  position: relative;
+  display: block;
+  width: calc(280% + 1.3px);
+  height: 205px;
+  margin-top: 0px;
+  border: 0px;
+
+}
+
+.custom-shape-divider-bottom-1725689494 .shape-fill {
+  fill: #E9F3FF;
+}
+
+/* Banner content */
+.banner-content {
+  padding: 90px;
+  padding-top: 0px;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* Align content to the left */
+  overflow-y: hidden;
+}
+
+/* Banner text */
+.banner-text {
+  width: 50%;
+  font-size: 76px;
+  margin-bottom: 20px;
+  text-align: left;
+  /* Align text to the left */
+  line-height: 76px;
+  overflow-y: hidden;
+  font-style: italic;
+  font-weight: 700;
+}
+
+/* Highlighted text */
+.highlight {
+  color: #3322af;
+  /* Yellow color for 'first choice' */
+}
+
+/* Neonatology highlighted text */
+.neonatology {
+  color: #3322af;
+  /* Red color for 'neonatology' */
+}
+
+/* Button container */
+.buttons-container {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+/* Schedule container */
+.schedule-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* Align content to the left */
 }
 
 .divider {
@@ -224,17 +493,21 @@
 
   text-align: left;
   margin-right: 10px;
-  color: rgb(136, 69, 207);
+  color: rgb(77, 28, 183);
 
 }
-.schedule-texts a{
+
+.schedule-texts a {
   text-decoration: none;
   /* border: solid 2px #ccc; */
 }
-.schedule-texts .schedule-text:hover .callno{
+
+.schedule-texts .schedule-text:hover .callno {
   text-decoration: none;
   color: rgb(32, 76, 217);
-} .schedule-texts .schedule-text:hover .icon{
+}
+
+.schedule-texts .schedule-text:hover .icon {
   text-decoration: none;
   color: rgb(45, 21, 224);
 }
@@ -242,13 +515,14 @@
 .vertical-divider {
   border: none;
   border-left: 1px solid white;
-  height: 40px; /* Adjust height to match text height */
+  height: 40px;
+  /* Adjust height to match text height */
   margin: 0 10px;
 }
 
 /* Button styles */
 .btn {
-  background-color:  #3322af;
+  background-color: #3322af;
   /* border: 2px solid white; */
   border-radius: 100px;
   color: white;
@@ -261,54 +535,20 @@
   font-weight: 900;
   margin-top: 20px;
 }
-.btn2{
+
+.btn2 {
   background-color: rgb(136, 69, 207);
 }
-.btn2:hover{
+
+.btn2:hover {
   color: rgb(136, 69, 207);
   background-color: #FFFFFF;
 }
 
-.btn1:hover  {
+.btn1:hover {
   background-color: white;
   color: #3322af;
   /* border: 2PX solid #3322af; */
 }
 
-    .banner-text {
-      font-size: 1.5em;
-    }
-  
-    .btn {
-      font-size: 0.9em;
-      padding: 8px 16px;
-    }
-  
-    .schedule-texts {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .vertical-divider {
-      display: none;
-    }
-  }
-  .banner .custom-shape-divider-bottom-1725689494 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-}
-
-.custom-shape-divider-bottom-1725689494 svg {
-    position: relative;
-    display: block;
-    width: calc(280% + 1.3px);
-    height: 313px;
-}
-
-.custom-shape-divider-bottom-1725689494 .shape-fill {
-    fill: #E9F3FF;
 }
