--- a/src/component/Home/CommanQ.css
+++ b/src/component/Home/CommanQ.css
@@ -69,25 +69,76 @@
   /* Responsive design */
   @media (max-width: 768px) {
     .commanq-container {
-      flex-direction: column;
-      text-align: center;
-    }
-  
+      display: block;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      padding: 0px;
+      padding-top: 0px;
+      width: 100%;
+      scale: 0.8;
+    
+  }
     .bt_bb_image {
-      margin-right: 0;
-      margin-bottom: 20px;
+      flex: 1;
+      margin-right: 30px;
+      border-radius: 30px;
+      scale: 1;
     }
-  
+    
+    .commanq-image {
+      border-radius: 30px;
+      max-width: 100%;
+      height: auto;
+    }
+    
     .commanq-content {
-      text-align: center;
-    }
+      flex:0 0 ;
+      text-align: left;
+      padding: 0px;
+      margin-left: 0px;
+      scale: 0.9;
+      width: 100%;
+      height: fit-content;
+  }
+    
+  .commanq-content h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 20px;
+      color: #3a6ea1;
+  }
   
+    .commanq-span{
+      color: #f46d67;
+  
+    }
+    
+    .questions {
+      display: flex;
+      flex-direction: column;
+      color:#3a6ea1;
+    }
+    
+    .question {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 0;
+      border-bottom: 1px solid #ddd;
+      cursor: pointer;
+    }
+    
     .question p {
-      font-size: 1rem;
+      margin: 0;
+      font-size: 2rem;
+      line-height: 1.4;
     }
-  
+    
     .plus {
-      font-size: 1.2rem;
+      font-size: 1.5rem;
+      color: #00aaff;
     }
+    
   }
   
