--- a/src/component/Home/Slider.css
+++ b/src/component/Home/Slider.css
@@ -1,6 +1,6 @@
 .carousel {
     position: relative;
-    width: 500px;
+    width: 100%;
     height: 400px;
     overflow: hidden;
     margin: 0 auto;
