--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -68,7 +68,7 @@ top: 0px;
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 12px;
+  gap: 3px;
   transition: max-height 0.3s ease-in-out;
 }
 
@@ -77,7 +77,7 @@ top: 0px;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.15em;
-  font-size: 1rem;
+  font-size: 0.7rem;
   font-weight: 500;
   display: inline-block;
   padding: 15px 20px;
@@ -179,7 +179,7 @@ top: 0px;
 }
 
 
- @media (max-width: 768px)  {
+ @media screen and (max-width: 768px)  {
   .navbar {
     background-color: #ffffff;
     border-radius: 55px;
@@ -238,7 +238,7 @@ top: 0px;
   .book-appointment {
     width: fit-content;
 
-    font-size:2px;
+    font-size:5px;
   }
 
   .navbar {
@@ -286,7 +286,7 @@ top: 0px;
   .logo img {
     width: 100px;
     max-height: 40px;
-    scale: 2;
+    scale: 1.5;
     padding-left: 0px;
     margin-left: 20px;
   
@@ -328,13 +328,13 @@ top: 0px;
     padding: 6px 10px;
     border-radius: 5px;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 10px;
   }
   
   .nav-actions .button.book-appointment {
     background-color: #28a745;
-    margin-right: 10px;
-    width: 250px;
+    margin-right: 0px;
+    width:160px;
   }
   
   .nav-actions .button.book-appointment:hover {
