--- a/src/component/footer/Footer.css
+++ b/src/component/footer/Footer.css
@@ -8,6 +8,7 @@
   width: 100%;
   /* height: 100px; */
   overflow-y: hidden;
+  overflow-x: hidden;
   line-height: 0;
 }
 
@@ -172,7 +173,7 @@
 }
 
 /* Responsive Design */
-@media (max-width: 764px) {
+@media screen and (max-width: 768px) {
 
 
   .footer-content {
@@ -194,12 +195,17 @@
   .footer-menu {
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    height: fit-content;
   }
 
   .footer-menu-section {
     margin-right: 0;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     text-align: center;
+    height:550px;
+    padding-bottom: 0px;
+    overflow-y: hidden;
   }
 
   .footer-menu-section ul li a {
@@ -258,6 +264,184 @@
 @media screen and (min-width: 768px) and (max-width:1060px) {
 
  
+/* Custom Shape Divider */
+.custom-shape-divider-top-1725347986 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /* height: 100px; */
+  overflow-y: hidden;
+  line-height: 0;
+  border: none;
+  outline: none;
+}
+
+.custom-shape-divider-top-1725347986 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  overflow-y: hidden;
+  height: 64px;
+}
+
+.custom-shape-divider-top-1725347986 .shape-fill {
+  fill: #FFFFFF;
+  overflow-y: hidden;
+  /* height: 100px; */
+
+}
+
+/* General Footer Styling */
+.bt-site-footer-main {
+  position: relative;
+  background-color: #d5ecfb;
+  padding: 40px 20px;
+  color: white;
+  font-family: sans-serif;
+}
+
+.bt-site-footer {
+  position: relative;
+  background-color: #d5ecfb;
+  padding: 40px 20px;
+  color: black;
+  font-family: sans-serif;
+}
+
+.footer-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-bottom: 1px solid #e9ecef;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  z-index: 1;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-left: 50px;
+}
+.footer-logo{
+  width: 30%;
+  margin-top: 10px;
+}
+
+.footer-logo img {
+  max-width: 80%;
+  height: auto;
+  margin-top: 0px;
+}
+
+.footer-logo p {
+  font-size: 16px;
+  line-height: 1.6;
+  width: 80%;
+  margin-top: -10px;
+}
+
+.footer-menu {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.footer-menu-section {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.footer-menu-section h6 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.footer-menu-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-menu-section ul li {
+  margin-bottom: 10px;
+}
+
+.footer-menu-section ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+}
+
+.footer-menu-section ul li a:hover {
+  text-decoration: underline rgb(24, 22, 22);
+}
+
+.footer-social-links {
+  display: flex;
+  align-items: center;
+}
+
+.social-icon {
+  margin-right: 10px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #e9ecef;
+}
+
+.social-icon .icon-size {
+  width: 30px;
+  height: 30px;
+  color: black;
+}
+
+.contact-info {
+  margin-top: 20px;
+}
+
+.contact-info p {
+  margin: 5px 0;
+}
+
+.footer-bottom {
+  width: 100%;
+  /* background-color: aqua; */
+
+}
+
+.footer-policy-links {
+  display: flex;
+  flex-wrap: wrap;
+  width: 95%;
+  margin-top: 10px;
+  text-align: left;
+  padding: 30px;
+}
+
+.footer-policy-links div {
+  width: 50%;
+  /* background-color: rgb(151, 42, 42); */
+
+}
+.privacylink{
+  text-align: right;
+}
+
+
+
+
+.footer-policy-links a {
+  color: black;
+  text-decoration: none;
+  margin-right: 15px;
+}
+
+.footer-policy-links a:hover {
+  text-decoration: underline;
+}
+
 
 
 }
