--- a/src/component/Home/NeonatologySection.css
+++ b/src/component/Home/NeonatologySection.css
@@ -1,167 +1,159 @@
 .neonatology-section {
-    display: flex;
-    width: 100%;
-    height:fit-content;
-    padding-bottom: 10px;
-    scale: 0.95;
-    overflow-x: hidden;
+  display: flex;
+  width: 100%;
+  height: 60rem;
+  /* padding-bottom: 3 rem; 10px */
+  /* scale: 0.95; */
+  overflow-x: hidden;
+  /* overflow-y: hidden; */
+}
+
+.neonatology-section .image-section {
+  width: 35%;
+  padding: 0.625rem; /* 10px */
+  scale: 0.8;
+  margin-top: 4.375rem; /* 70px */
+}
+
+.neonatology-section .image-section img {
+  width: 100%;
+  height: 50.625rem; /* 650px */
+  border-radius: 0.625rem; /* 10px */
+}
+
+.text-section {
+  font-family: Arial, sans-serif;
+  /* scale: 1.1; */
+  width: 60%;
+  height: fit-content;
+  padding-top: 6.25rem; /* 100px */
+}
+
+.neonatology-section .text-section .title {
+  font-size: 4rem; /* 55px */
+  line-height: 1.4;
+  padding-left: 1.875rem; /* 30px */
+  color: #3a6ea1;
+  text-align: center;
+}
+
+.text-section .title span {
+  color: #f46d67;
+}
+
+ .text-section .flex-container1, .text-section .flex-container2 {
+  margin-top: 0rem; /* -50px */
+  text-align: left;
+  width: 100%;
+  height: 180px;
+  display: flex;
+ /* padding-top: 16rem; */
+}
+
+.flex-container1 .flex-item {
+  width: 33%;
+  height: fit-content;
+  border-radius: 0.625rem; /* 10px */
+  text-align: left;
+  color: black;
+  display: block;
+
+}
+
+.flex-container .flex-item img {
+  width: 3rem; /* 40px */
+  height: 3rem; /* 40px */
   }
-  
+
+.flex-item h3 {
+  margin-top: 0;
+  font-size: 2.5rem; /* 18px */
+  text-align: left;
+}
+
+.flex-item p {
+  font-size: 1.5rem; /* 14px */
+  line-height: 2rem;
+  text-align: left;
+  font-family: "albert sans",sans-serif;
+}
+
+/* Responsive adjustments */
+@media screen and (max-width: 768px) {
+  .neonatology-section {
+    display: block;
+    width: 100%;
+    height: fit-content;
+    overflow-y: hidden;
+  }
+
   .neonatology-section .image-section {
-    width: 35%;
-    padding: 10px;
-    scale: 0.8;
-    margin-top: 70px;
-  }
-  
-  .neonatology-section .image-section img {
     width: 100%;
-    height: 650px;
-    border-radius: 10px;
+    height: fit-content;
+    padding: 0;
+    scale: 1;
   }
-  
+
+  .neonatology-section .image-section img {
+    width: 95%;
+    margin-left: 0.625rem; /* 10px */
+    height: fit-content;
+    border-radius: 0.625rem; /* 10px */
+    overflow-y: hidden;
+  }
+
   .text-section {
     font-family: Arial, sans-serif;
-   scale: 1.1;
-      width:60%;
-      height:fit-content;
-      padding-top: 100px;
-       
+    scale: 1.1;
+    width: 100%;
+    height: fit-content;
+    padding-top: 6.25rem; /* 100px */
   }
-  
-  .neonatology-section .text-section .title {
-    font-size: 55px;
-    line-height: 1.4;
-    padding-left: 30px;
 
-    
-  
+  .neonatology-section .text-section .title {
+    font-size: 2.1875rem; /* 35px */
+    line-height: 1.4;
+    padding-left: 1.875rem; /* 30px */
     color: #3a6ea1;
   }
- .text-section .title span{
-     color: #f46d67;
+
+  .text-section .title span {
+    color: #f46d67;
   }
-  
-  .flex-container1 ,.flex-container2{
-  
-    margin-top:-50px;
+
+  .flex-container1, .flex-container2 {
     text-align: left;
     width: 100%;
-    height:fit-content;
-    display: flex;
-    /* outline: auto; */
-}
+    height: fit-content;
+    display: block;
+    margin-top: 0;
+  }
+
   .flex-container1 .flex-item {
-    /* flex: 0 0 0%; Each item will take up about 48% of the width */
-    width: 30%;
-    height: fit-content;  
-    border-radius: 10px;
-    text-align: left;
+    width: 80%;
+    height: fit-content;
+    border-radius: 0.625rem; /* 10px */
     color: black;
     display: block;
-    /* outline: auto; */
+    margin: 0;
+    padding: 0;
+    margin-left: 1.875rem; /* 30px */
   }
-  .flex-container .flex-item  img{
-    width: 40px;
-    height: 40px;
+
+  .flex-container .flex-item img {
+    width: 6.25rem; /* 100px */
+    height: fit-content;
   }
-  
+
   .flex-item h3 {
     margin-top: 0;
-    font-size: 18px;
+    font-size: 1.125rem; /* 18px */
     text-align: left;
   }
 
-  .flex-item p{
-  font-size: 14px;
-  line-height: 1.5;
-  text-align: left;
-  }
-  /* Responsive adjustments */
-  @media screen and (max-width: 768px) {
-    .neonatology-section {
-      display: block;
-      width: 100%;
-      height:fit-content;
-      overflow-y: hidden;
-    }
-    
-    .neonatology-section .image-section {
-      width: 100%;
-      height: fit-content;
-      padding: 0px;
-      scale:1;
-      padding: auto;
-    }
-    
-    .neonatology-section .image-section img {
-      width: 95%;
-    margin-left: 10px;
-      height: fit-content;
-      border-radius: 10px;
-      overflow-y: hidden;
-    }
-    
-    .text-section {
-      font-family: Arial, sans-serif;
-     scale: 1.1;
-        width:100%;
-        height:fit-content;
-        padding-top: 100px;
-         
-    }
-    
-    .neonatology-section .text-section .title {
-      font-size: 35px;
-      line-height: 1.4;
-      padding-left: 30px;
-  
-      
-    
-      color: #3a6ea1;
-    }
-   .text-section .title span{
-       color: #f46d67;
-    }
-    
-    .flex-container1 ,.flex-container2{
-    
-      /* padding: 30px; */
-      text-align: left;
-      width: 100%;
-      height:fit-content;
-      display: block;
-      margin-top: 0px;
-      /* outline: auto; */
-  }
-    .flex-container1 .flex-item {
-      /* flex: 0 0 0%; Each item will take up about 48% of the width */
-      width: 80%;
-      height: fit-content;  
-      border-radius: 10px;
-      /* text-align: center; */
-      color: black;
-      display: block;
-      /* outline: auto; */
-      margin: 0px;
-      padding: 0px;
-      margin-left: 30px;
-    }
-    .flex-container .flex-item  img{
-      width: 100px;
-      height:fit-content;
-    }
-    
-    .flex-item h3 {
-      margin-top: 0;
-      font-size: 18px;
-      text-align: left;
-    }
-  
-    .flex-item p{
-    font-size: 14px;
+  .flex-item p {
+    font-size: 0.875rem; /* 14px */
     line-height: 1.5;
     text-align: left;
-    }
   }
-  
+}
