--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -1,32 +1,29 @@
 .navbar {
   background-color: #fffcfc;
-  margin-top: 0px;
-  padding: 0px;
+  margin-top: 0rem;
+  padding: 0rem;
   width: calc(94%);
-  border-radius: 50px;
+  border-radius: 3.125rem; /* 50px */
   z-index: 1000;
-/* box-shadow: #333 2px 10px 10px; */
   transition: background-color 0.3s ease, box-shadow 0.3s ease, top 3s ease, left 0.3s ease, border-radius 0.3s ease;
   position: absolute;
   overflow-y: hidden;
-  margin-left:2.5%;
-  margin-top: 20px;
-  height: 76px;
+  margin-left: 2.5%;
+  margin-top: 2rem;
+  height: 4.75rem; /* 76px */
+  padding-top: 0.5rem;
 }
-
 
 .navbar.sticky {
   background-color: #fffcfc;
-  margin-top: 0px;
-top: 0px;
+  margin-top: 0rem;
+  top: 0rem;
   width: calc(100%);
-  border-radius: 0px;
+  border-radius: 0rem;
   z-index: 1000;
   position: fixed;
- 
-  margin-left:0%;
+  margin-left: 0%;
   transition: 1000ms;
-
 }
 
 .container {
@@ -36,65 +33,58 @@ top: 0px;
 }
 
 .logo {
-  width: 250px;
-  height: 50px;
+  width:20rem; /* 250px */
+  height: 3.125rem; /* 50px */
   overflow: hidden;
 }
 
 .logo img {
-  width: 100px;
-  max-height: 40px;
+  width: 10rem; /* 100px */
+  max-height: 2.5rem; /* 40px */
   scale: 3;
-  padding-left: 20px;
-  margin-left: 30px;
-
-  scrollbar-width: 0px;
+  padding-left: 2rem; /* 20px */
+  margin-left: 1.875rem; /* 30px */
 }
 
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 3px;
+  gap: 0.1875rem; /* 3px */
   transition: max-height 0.3s ease-in-out;
 }
 
- .nav-links a {
+.nav-links a {
   color: #0e0e0e;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.15em;
-  font-size: 0.7rem;
-  font-weight: 500;
+  font-size: 1.5rem;
+  font-weight: 700;
   display: inline-block;
-  padding: 15px 20px;
+  padding: 0.9375rem 1.25rem; /* 15px 20px */
   position: relative;
-
-  /* text-decoration: none; */
-  /* color: #333;
-  font-weight: 500;
-  font-size: 14px; */
 }
- .nav-links a:after {    
+
+.nav-links a:after {
   background: none repeat scroll 0 0 transparent;
   bottom: 0;
   content: "";
   display: block;
-  height: 2px;
+  height: 0.1875rem; /* 3px */
   left: 0%;
   position: absolute;
   background: #0e0e0e;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0%;
-  height: 3px;
-  
 }
-.nav-links a:hover{
-  color: #28a745;
 
+.nav-links a:hover {
+  color: #28a745;
 }
- .nav-links a:hover:after { 
-  width:70%; 
-  left: 15px; 
+
+.nav-links a:hover:after {
+  width: 70%;
+  left: 0.9375rem; /* 15px */
   color: #68e683;
   background-color: #28a745;
 }
@@ -105,9 +95,9 @@ top: 0px;
 }
 
 .nav-actions a.search {
-  margin-right: 15px;
+  margin-right: 0.9375rem; /* 15px */
   color: #333;
-  font-size: 16px;
+  font-size: 1rem; /* 16px */
 }
 
 .nav-actions .button {
@@ -115,15 +105,15 @@ top: 0px;
   align-items: center;
   background-color: #007bff;
   color: #fff;
-  padding: 6px 10px;
-  border-radius: 5px;
+  padding: 0.375rem 1.5rem; /* 6px 10px */
+  border-radius: 2rem; /* 5px */
   text-decoration: none;
-  font-size: 14px;
+  font-size: 1.5rem; /* 14px */
 }
 
 .nav-actions .button.book-appointment {
   background-color: #28a745;
-  margin-right: 50px;
+  margin-right: 3.125rem; /* 50px */
   width: fit-content;
 }
 
@@ -135,21 +125,21 @@ top: 0px;
   display: none;
   flex-direction: column;
   justify-content: space-around;
-  width: 25px;
-  height: 25px;
+  width: 1.5625rem; /* 25px */
+  height: 1.5625rem; /* 25px */
   cursor: pointer;
   transition: transform 0.3s ease;
 }
 
 .hamburger .bar {
   width: 100%;
-  height: 3px;
+  height: 0.1875rem; /* 3px */
   background-color: #333;
   transition: transform 0.3s ease, opacity 0.3s ease, background-color 0.3s ease;
 }
 
 .hamburger.open .bar:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
+  transform: rotate(45deg) translate(0.3125rem, 0.3125rem); /* 5px, 5px */
 }
 
 .hamburger.open .bar:nth-child(2) {
@@ -157,233 +147,81 @@ top: 0px;
 }
 
 .hamburger.open .bar:nth-child(3) {
-  transform: rotate(-45deg) translate(5px, -5px);
+  transform: rotate(-45deg) translate(0.3125rem, -0.3125rem); /* 5px, -5px */
 }
 
 .hamburger.open .bar {
   background-color: #ff0000;
 }
 
-
- @media screen and (max-width: 768px)  {
+/* Media Query */
+@media screen and (max-width: 48rem) { /* 768px */
   .navbar {
     background-color: #ffffff;
-    border-radius: 55px;
-    margin-top: 20px;
-    padding: 0px 0px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 3.4375rem; /* 55px */
+    margin-top: 1.25rem; /* 20px */
+    padding: 0rem 0rem;
+    box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, 0.1); /* 2px 5px */
     width: 100%;
-    height: 50px;
-    top: 0px;
-    left: 0px;
+    height: 3.125rem; /* 50px */
+    top: 0rem;
+    left: 0rem;
     z-index: 1000;
     transition: background-color 0.3s ease, box-shadow 0.3s ease, top 0.3s ease, left 0.3s ease, border-radius 0.3s ease;
     position: absolute;
-  
   }
 
-   .navbar {
-    padding: 0px 0px;
-    top: 0px;
-    left: 10px;
+  .navbar {
+    padding: 0rem 0rem;
+    top: 0rem;
+    left: 0.625rem; /* 10px */
   }
+
   .logo img {
-
-    max-height: 40px;
+    max-height: 2.5rem; /* 40px */
     scale: 1.5;
-    padding-left: 0px;
+    padding-left: 0rem;
   }
 
   .nav-links {
     flex-direction: column;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
     max-height: 0;
     overflow: visible;
     background-color: #fff;
     position: absolute;
-    top: 50px;
-    right: 20px;
-    width: 150px;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    top: 3.125rem; /* 50px */
+    right: 1.25rem; /* 20px */
+    width: 9.375rem; /* 150px */
+    padding: 0.625rem; /* 10px */
+    border-radius: 0.5rem; /* 8px */
+    box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, 0.1); /* 2px 5px */
     display: none;
   }
 
   .nav-links.open {
-    max-height: 300px;
+    max-height: 18.75rem; /* 300px */
     display: block;
     transition: ease-in-out 5s;
   }
 
   .hamburger {
     display: flex;
-    margin-left: 10px;
+    margin-left: 0.625rem; /* 10px */
   }
 
   .book-appointment {
     width: fit-content;
-
-    font-size:5px;
+    font-size: 0.3125rem; /* 5px */
   }
 
-  .navbar {
-    background-color: #faf6f6;
-    margin-top: 10px;
-
-    width: calc(90%);
-    border-radius: 50px;
-    z-index: 1000;
-  
-    transition: background-color 0.3s ease, box-shadow 0.3s ease, top 3s ease, left 0.3s ease, border-radius 0.3s ease;
-    position: absolute;
-    overflow-y: hidden;
-    margin-left:1%x;
-  }
-  
-  .navbar.sticky {
-    background-color: #fefdfd;
-    margin-top: 10px;
-
-    width: calc(90%);
-    border-radius: 50px;
-    z-index: 1000;
-    position: fixed;
-  
-    
-   
-    margin-left:0%;
-    margin-right: 2px;
-
-  }
-  
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .logo {
-    width: 250px;
-    height: 50px;
-    overflow: hidden;
-  }
-  
-  .logo img {
-    width: 100px;
-    max-height: 40px;
-    scale: 1.5;
-    padding-left: 0px;
-    margin-left: 20px;
-  
-    scrollbar-width: 0px;
-  }
-  
-  .nav-links {
-    list-style: none;
-    display: flex;
-  
-    transition: max-height 0.3s ease-in-out;
-  }
-  
-  /* .nav-links a {
-    text-decoration: none;
-    color: #333;
-    font-weight: 500;
-    font-size: 14px;
-    margin-top: 100px;
-  
-  } */
-  
-  .nav-actions {
-    display: flex;
-    align-items: center;
-  }
-  
-  .nav-actions a.search {
-    margin-right: 15px;
-    color: #333;
-    font-size: 16px;
-  }
-  
-  .nav-actions .button {
-    display: flex;
-    align-items: center;
-    background-color: #007bff;
-    color: #fff;
-    padding: 6px 10px;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 10px;
-  }
-  
-  .nav-actions .button.book-appointment {
-    background-color: #28a745;
-    margin-right: 0px;
-    width:105%;
-    height: fit-content;
-  }
-  
-  .nav-actions .button.book-appointment:hover {
-    background-color: #218838;
-  }
-  
   .hamburger {
-    margin-right: 10px;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 50px;
-    height: 20px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+    margin-right: 0.625rem; /* 10px */
+    width: 3.125rem; /* 50px */
+    height: 1.25rem; /* 20px */
   }
-  
+
   .hamburger .bar {
-    width: 100%;
-    height: 3px;
-    background-color: #333;
-    transition: transform 0.3s ease, opacity 0.3s ease, background-color 0.3s ease;
+    height: 0.1875rem; /* 3px */
   }
-  
-  .hamburger.open .bar:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-  }
-  
-  .hamburger.open .bar:nth-child(2) {
-    opacity: 0;
-  }
-  
-  .hamburger.open .bar:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
-  }
-  
-  .hamburger.open .bar {
-    background-color: #ff0000;
-  } 
-  .nav-links.open{
-
-    overflow: scroll;
-    position:fixed;
-    top: 40px;
-    right: 0px;
-    width: 170px;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(228, 17, 17, 0.1);
-    display: block;
-    background-color: #faf6f6;
-    transition: 2s;
-    height: fit-content;
-    padding-bottom: 30px;
-
-  
-
-  }
-  .nav-links li{
-    margin-bottom: 30px;
-  }
-  
-  
-  
-  
 }
